--- a/lesson_3_js_Victor/index.html
+++ b/lesson_3_js_Victor/index.html
@@ -44,11 +44,15 @@
     <div id="big">
         <div id="medium">
             <div id="small">
-               
+               <button id="1">1</button>
+               <button id="2">2</button>
+               <button id="3">3</button>
+               <button id="4">4</button>
+               <button id="5">5</button>
             </div>
         </div>
     </div>
     <a href="https://learn.javascript.ru/document" id="a">Google</a>
-    <script src="main.js"></script>
+    <script src="main3.js"></script>
 </body>
 </html>
