--- a/lesson_3_js_Victor/index.html
+++ b/lesson_3_js_Victor/index.html
@@ -45,10 +45,10 @@
         <div id="medium">
             <div id="small">
                <button id="1">1</button>
-               <button id="2">2</button>
+               <!--<button id="2">2</button>
                <button id="3">3</button>
                <button id="4">4</button>
-               <button id="5">5</button>
+               <button id="5">5</button>-->
             </div>
         </div>
     </div>
