--- a/lesson_5_js_Victor/index.html
+++ b/lesson_5_js_Victor/index.html
@@ -9,3 +9,31 @@
 
 </body>
 </html>
+
+const superUser = {
+name: "Bob",
+age: 23,
+friends: [
+{
+id: 1,
+name: "Ann",
+age: 22,
+isMarried: true,
+scores: 85
+},
+{
+id: 2,
+name: "Alex",
+age: 21,
+isMarried: true,
+scores: 90,
+},
+{
+id: 4,
+name: "John",
+age: 19,
+isMarried: false,
+scores: 100
+}
+]
+}
